// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tuxedo_Atoms - Heading Default Md 1`] = `
.c0 {
  display: inline-block;
  font-weight: 600;
  font-size: 15px;
}

<div
  className="c0"
  variant="md"
>
  Heading text
</div>
`;

exports[`Tuxedo_Atoms - Heading Extra Large 1`] = `
.c0 {
  display: inline-block;
  font-weight: 600;
  font-size: 24px;
}

<div
  className="c0"
  variant="xl"
>
  Heading text
</div>
`;

exports[`Tuxedo_Atoms - Heading Large 1`] = `
.c0 {
  display: inline-block;
  font-weight: 600;
  font-size: 18px;
}

<div
  className="c0"
  variant="lg"
>
  Heading text
</div>
`;
